# composite_vault

./: Anchor.toml  README.md
composite_vault/: .gitignore  Anchor.toml  README.md  cargo.toml  package-lock.json  package.json  tsconfig.json
composite_vault/programs/composite_vault/: Cargo.toml
composite_vault/programs/composite_vault/src/: lib.rs
composite_vault/programs/composite_vault/tests/: init_normalize.rs
composite_vault/tests/: composite_vault.ts
frontend/: package.json  pnpm-lock.yaml
frontend/anchor-idl/: composite_vault.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: CompositeValueTable.tsx  TokenLeaderboard.tsx
frontend/components/counter/: CounterCard.tsx  CounterDisplay.tsx  CreateCompositeButton.tsx  DecrementButton.tsx  IncrementButton.tsx  SimpleLogButton.tsx  ToastContent.tsx  WalletButton.tsx
frontend/components/counter/hooks/: useProgram.tsx  useTransactionToast.tsx
frontend/components/counter/provider/: Solana.tsx
frontend/lib/: compositeValue.ts
frontend/pages/api/: tokens.ts
frontend/pages/api/composites/: value.ts
scripts/: README.md  generate-idl-ts.mjs
